--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Inter');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 30%;
+  font-size: 1.3vw;
+  background-color: #00141D;
+  color: #808080;
+  scroll-behavior: smooth;
 }
 
+body h1{
+  font-size: 2.5vw;
+  font-style: bold;
+  font-weight:500;
+  color: #deedf8;
+}
+
+body h2{
+  line-height: 120%;
+  color: #3d677b;
+  font-size:2vw;
+}
 code {
   font-family: 'Roboto';
+}
+
+form {
+  background-color: #00141D;
+  border-color: #808080;
+  border-width: 5px;
+  border-radius: 1.5vw;
+}
+
+html {
+  scroll-behavior: smooth;
 }
