--- a/src/components/contactMe/contactMe.css
+++ b/src/components/contactMe/contactMe.css
@@ -51,16 +51,18 @@
     flex-direction: row;
     width: 12vw;
     justify-content: space-between;
-    margin-right:5%;
     height:12vw;
     margin: auto;
-    border-width: 5px;
-    border-color: aliceblue;
     margin-bottom:35%;
     margin-left:10%;
 }
 
 .logo{
+    width: 6vw;
+    margin-bottom: 35%;
+}
+
+.logo2{
     width: 6vw;
     margin-bottom: 35%;
 }
@@ -80,4 +82,62 @@
 
 .email-button:hover{
     cursor: pointer
+}
+
+@media screen and (max-width: 1200px){
+    .contact{
+        display: inline;
+    }
+    .email-form{
+        width:90%;
+        margin: auto;
+    }
+
+    .form{
+        border-radius: 3vw;
+        border-width: 3px;
+        font-size: 4vw;
+    }
+
+    .message-form{
+        border-radius: 3vw;
+        border-width: 3px;
+        font-size: 4vw;
+        min-height: 40vw;
+    }
+
+    .email-button{
+        height: 10vw;
+        font-size: 4vw;
+        margin-bottom: 5%;
+    }
+
+    .logos{
+        width:90%;
+        margin-left: 0;
+        margin:auto;
+        margin-bottom: 7.5%;
+        margin-top: 5%;
+    }
+
+    .row{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: center;
+    }
+    
+    .logo{
+        width: 18vw;
+    }
+
+    .logo2{
+        width: 20.25vw
+    }
+
+    .graphic{
+        width: 90%;
+        margin: auto;
+    }
 }
