--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -48,3 +48,33 @@
     width: 4vw;
     margin-top:0%;
   }
+
+  @media screen and (max-width: 1200px){
+    .Hero{
+      background-image: url('./statics/IMG_0190.jpg');
+      background-position: 55% center;
+    }
+
+    .Nametag{
+      width: 90%;
+      top: 0%;
+      font-size: 7vw;
+    }
+
+    .Bigname{
+      font-size: 20vw;
+      padding:1%;
+    }
+
+    .Name{
+      margin-bottom: 21%
+    }
+
+    .Scroll{
+      font-size: 4vw;
+    }
+
+    .Arrowstyle{
+      display: none;
+    }
+  }
