--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,19 @@ form {
 html {
   scroll-behavior: smooth;
 }
+
+@media screen and (max-width: 1200px){
+  body{
+    font-size:4.5vw;
+  }
+
+  body h1{
+    font-size:10vw;
+    font-weight: 650;
+  }
+
+  body h2{
+    font-size: 8vw;
+    line-height: 110%;
+  }
+}
