--- a/src/components/contactMe/contactMe.css
+++ b/src/components/contactMe/contactMe.css
@@ -85,7 +85,12 @@
     cursor: pointer
 }
 
-@media screen and (max-width: 1200px){
+.love:hover{
+    transition: color 1s;
+    color:rgb(255, 0, 0);
+}
+
+@media screen and (max-width: 900px){
     .contact{
         display: inline;
     }
